--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -4,3 +4,6 @@
 ?>
 <p><?php echo $this->translate("to Unplagged. This web-based software offers you a simple, collaborative approach to 
 search and document plagiarism in scientific papers.");?></p>
+
+<?php echo $this->currentCase; ?>
+<?php echo $this->barcode; ?>
