--- a/application/layouts/scripts/partials/sidebars/default.phtml
+++ b/application/layouts/scripts/partials/sidebars/default.phtml
@@ -4,6 +4,7 @@
   <?php echo $this->translate("Latest cases"); ?></li>
   
     <?php foreach ($this->cases as $case): ?>
+    <?php $barcode = null; ?>
     <li>
       <a href="#"><?php echo $case->getPublishableName(); ?> <span class="badge badge-light"><?php echo $case->getPlagiarismPercentage(); ?> %</span>
         <div class="barcode">
