--- a/application/views/scripts/document/fragment/show.phtml
+++ b/application/views/scripts/document/fragment/show.phtml
@@ -22,7 +22,6 @@ $this->headTitle($this->title);
 ?>
 <p>
   <?php echo $this->translate("Type"); ?>: <?php echo $this->fragment->getType()->getName(); ?><br/>
-  <?php echo $this->translate("Note"); ?>: <?php echo $this->fragment->getNote(); ?>
 </p>
 <p>
 <div class="document-page diff clearfix">
@@ -40,9 +39,12 @@ $this->headTitle($this->title);
   </div>
 </div>
 </p>
+<p><?php echo $this->translate("Note"); ?>: <?php echo $this->fragment->getNote(); ?></p>
+
 <p class="pagination-right">
   <a href="#" class="btn compare-with-color" data-colors="true" data-value="<?php echo $this->fragment->getId(); ?>"><i class="icon-remove-circle"></i>Hide colors</a>
 </p>
+
 
 <h3>Ratings</h3>
 <p>
