--- a/application/layouts/scripts/partials/footer.phtml
+++ b/application/layouts/scripts/partials/footer.phtml
@@ -2,23 +2,26 @@
         <a href=""><?php echo $this->translate('Imprint'); ?></a>
       </footer>
     </div>    
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="<?php echo $this->baseUrl('/js/libs/jquery-1.7.1.min.js'); ?>"><\/script>')</script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="<?php echo $this->baseUrl('/js/libs/jquery-1.7.2.min.js'); ?>"><\/script>')</script>
     
-    <?php //plugins as those below should be put into plugins.js later on ?>
+    <?php 
+     //plugins from other vendors should be put here
+     //@todo add automatic minification of scripts later on
+    ?>
     <script defer src="<?php echo $this->baseUrl('/js/libs/jquery-ui-1.8.17.custom.min.js'); ?>"></script>
-
     <script defer src="<?php echo $this->baseUrl('/js/libs/numberfy.js'); ?>"></script>
     <script defer src="<?php echo $this->baseUrl('/js/libs/jquery.autosize.js'); ?>"></script>
-
     <script defer src="<?php echo $this->baseUrl('/js/libs/jquery.lightbox-0.5.min.js'); ?>"></script>
     <script defer src="<?php echo $this->baseUrl('/js/libs/bootstrap.min.js'); ?>"></script>
-    
-    <?php //The 'Actual' project scripts ?>
+    <script defer src="<?php echo $this->baseUrl('/js/libs/chosen.jquery.min.js'); ?>"></script>
+    <script defer src="<?php echo $this->baseUrl('/js/libs/jquery.uploadify-3.1.min.js'); ?>"></script>
+    <?php //own plugins go here ?>
     <script defer src="<?php echo $this->baseUrl('/js/plugins.js'); ?>"></script>
+    <?php //all other small scripts can be put here ?>
     <script defer src="<?php echo $this->baseUrl('/js/script.js'); ?>"></script>
     
-    <?php // @todo: this needs to be merged into script.js, but for developing it is better to have single script files ?>
+    <?php // @todo: this needs to be turned into a plugin and put into plugins.js ?>
     <script defer src="<?php echo $this->baseUrl('/js/contextmenu.js'); ?>"></script>
 </body>
 </html>
