--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -1841,19 +1841,20 @@ ins {
 	width: 98%;
 }
 
-.plupload_header {background: #2A2C2E url('../images/backgrounds.gif') repeat-x;}
+.plupload_header {background: #484C51;}
 .plupload_header_content {
-	background: url('../images/backgrounds.gif') no-repeat 0 -317px;
-	min-height: 56px;
-	padding-left: 60px;
+	min-height: 26px;
+	padding-left: 10px;
 	color: #FFF;
 }
 .plupload_header_title {
+  display: none; /* hide because we use our own title, not the one from the plugin */
 	font: normal 18px sans-serif;
 	padding: 6px 0 3px;
 }
 .plupload_header_text {
 	font: normal 12px sans-serif;
+  padding: 6px 0 3px;
 }
 
 .plupload_filelist {
