--- a/application/views/scripts/file/upload.phtml
+++ b/application/views/scripts/file/upload.phtml
@@ -10,7 +10,7 @@
   </div>
   <div class="modal-body">
     <dl>
-      <dt id="newName-label"><label for="newName" class="optional"><?php echo $this->translate('Filename'); ?>:</label></dt>
+      <dt id="newName-label"><label for="newName" class="optional"><?php echo $this->translate('Filename'); ?>:*</label></dt>
       <dd id="newName-element">
         <input type="text" name="newName" id="newName" value="" class="tooltip-toggle"></dd>
       <dt id="description-label"><label for="description" class="optional"><?php echo $this->translate('Description'); ?>:</label></dt>
