--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,9 +1,10 @@
 <?php
-    $this->title = $this->translate("Welcome") . ',';
-    $this->headTitle($this->title);
+$defaultConfig = Zend_Registry::getInstance()->config->default;
+$applicationName = $defaultConfig->applicationName;
+$this->title = $this->translate('Welcome to %s', $applicationName) . '.';
+$this->headTitle($this->title);
 ?>
-<p><?php echo $this->translate("to Unplagged. This web-based software offers you a simple, collaborative approach to 
-search and document plagiarism in scientific papers.");?></p>
+<div class="welcome-message well"><?php echo $this->translate($defaultConfig->welcomeMessage); ?></div>
 
 <?php echo $this->currentCase; ?>
 <?php echo $this->barcode; ?>
