fixes floating issue on home page

--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -2033,7 +2033,7 @@ li.plupload_droptext {
   .diff .src-wrapper,
   .zend_form .two-column-form,
   .layout-2-columns-equal .first,
-  .layout-2-columns-equal .second,
+  .layout-2-columns-equal .second
   {
     float: none;
     width: 100%;
