Cleaned up unused and unnecessary files

--- a/application/layouts/scripts/partials/footer.phtml
+++ b/application/layouts/scripts/partials/footer.phtml
@@ -18,6 +18,7 @@
     <script defer src="<?php echo $this->baseUrl('/js/libs/plupload/js/plupload.full.js'); ?>"></script>
     <script defer src="<?php echo $this->baseUrl('/js/libs/plupload/js/jquery.plupload.queue/jquery.plupload.queue.js'); ?>"></script>
     
+    <?php //Language files for plupload ?>
     <?php $languageString = Zend_Registry::getInstance()->Zend_Locale->getLanguage(); ?>
     <?php $pluploadTranslationPath = '/js/libs/plupload/js/i18n/' . $languageString . '.js'; ?>
     <?php if(file_exists(BASE_PATH . DIRECTORY_SEPARATOR . 'public' . $pluploadTranslationPath)): ?>
