Test mail templates for registration

--- a/application/views/emails/en/html/registration.phtml
+++ b/application/views/emails/en/html/registration.phtml
@@ -21,4 +21,8 @@ Thank you for your registration.
 
 Please click the following link, to verify your account:
 
-<?php echo $this->verificationLink; ?>
+<a href="<?php echo $this->verificationLink; ?>"><?php echo $this->verificationLink; ?></a>
+
+Best regards,
+
+<?php echo $this->sender; ?>
