adds fixed action menu to the right

--- a/application/layouts/scripts/partials/sidebars/document_tools.phtml
+++ b/application/layouts/scripts/partials/sidebars/document_tools.phtml
@@ -1,4 +1,4 @@
-<nav id="right-nav" class="ell">
+<nav id="right-nav" class="dropdown-menu fixed-nav poped-in">
   <ul class="nav nav-list">
     <li class="nav-header">
       Actions
