--- a/application/views/emails/en/html/registration.phtml
+++ b/application/views/emails/en/html/registration.phtml
@@ -17,12 +17,12 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 ?>
-Thank you for your registration.
+<p>Thank you for your registration.</p>
 
-Please click the following link, to verify your account:
+<p>Please click the following link, to verify your account:</p>
 
-<a href="<?php echo $this->verificationLink; ?>"><?php echo $this->verificationLink; ?></a>
+<p><a href="<?php echo $this->verificationLink; ?>"><?php echo $this->verificationLink; ?></a></p>
 
-Best regards,
+<p>Best regards,</p>
 
-<?php echo $this->sender; ?>
+<p><?php echo $this->sender; ?></p>
