--- a/application/views/emails/de/plain/registration.phtml
+++ b/application/views/emails/de/plain/registration.phtml
@@ -17,11 +17,13 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 ?>
-Vielen Dank für Ihre Registrierung.
+Hallo <?php echo $this->recipient; ?>,
 
-Bitte folgen Sie dem folgenden Link um Ihren Account zu verifizieren:
+vielen Dank für Deine Registrierung.
 
-<?php echo $this->verificationLink; ?>
+Bitte folge dem folgenden Link um Deinen Account zu verifizieren:
+
+<?php echo $this->verificationLink . '\n'; ?>
 
 Mit freundlichen Grüßen,
 
