Some more "styling" and wording changes to registration mail

--- a/application/views/emails/de/html/registration.phtml
+++ b/application/views/emails/de/html/registration.phtml
@@ -21,7 +21,7 @@
 
 <p>vielen Dank für Deine Registrierung.</p>
 
-<p>Bitte folgen dem folgenden Link um Deinen Account zu verifizieren:</p>
+<p>Bitte nutze den folgenden Link um die Registrierung Deines Accounts zu verifizieren:</p>
 
 <p><a href="<?php echo $this->verificationLink; ?>"><?php echo $this->verificationLink; ?></a></p>
 
