--- a/application/views/emails/de/plain/registration.phtml
+++ b/application/views/emails/de/plain/registration.phtml
@@ -21,9 +21,10 @@ Hallo <?php echo $this->recipient; ?>,
 
 vielen Dank für Deine Registrierung.
 
-Bitte folge dem folgenden Link um Deinen Account zu verifizieren:
+Bitte nutze den folgenden Link um die Registrierung Deines Accounts zu verifizieren:
 
-<?php echo $this->verificationLink . '\n'; ?>
+<?php echo $this->verificationLink; ?>
+
 
 Mit freundlichen Grüßen,
 
